// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="flex items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 125.10
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Grid view 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="flex items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 125.10
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(3) Nsfw 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="flex items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image item-image-nsfw"
    >
      <img
        alt="Awesome Hive"
        className="w-full"
        src="nsfw.png"
      />
    </div>
    <div
      className="item-summary"
    >
      <div
        className="item-nsfw"
      >
        <span
          className="nsfw-badge"
        >
          NSFW
        </span>
      </div>
      <div
        className="item-nsfw-options"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Reveal this post
        </a>
         
        or
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<a href=\\"/signup\\" class=\\"push-link\\">create an account</a> to save your preferences",
            }
          }
        />
        .
      </div>
    </div>
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 125.10
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(4) Nsfw with active user 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="flex items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image item-image-nsfw"
    >
      <img
        alt="Awesome Hive"
        className="w-full"
        src="nsfw.png"
      />
    </div>
    <div
      className="item-summary"
    >
      <div
        className="item-nsfw"
      >
        <span
          className="nsfw-badge"
        >
          NSFW
        </span>
      </div>
      <div
        className="item-nsfw-options"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Reveal this post
        </a>
         
        or
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<a href=\\"/signup\\" class=\\"push-link\\">create an account</a> to save your preferences",
            }
          }
        />
        .
      </div>
    </div>
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 125.10
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(5) Nsfw but allowed 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="flex items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image item-image-nsfw"
    >
      <img
        alt="Awesome Hive"
        className="w-full"
        src="nsfw.png"
      />
    </div>
    <div
      className="item-summary"
    >
      <div
        className="item-nsfw"
      >
        <span
          className="nsfw-badge"
        >
          NSFW
        </span>
      </div>
      <div
        className="item-nsfw-options"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Reveal this post
        </a>
         
        or
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<a href=\\"/signup\\" class=\\"push-link\\">create an account</a> to save your preferences",
            }
          }
        />
        .
      </div>
    </div>
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 125.10
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(6) Cross post. Bottom menu 1`] = `
<div
  className="entry-list-item hot"
  id="regenerettewe-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
>
  <div
    className="cross-item"
  >
    <a
      href="/@regenerette"
      onClick={[Function]}
    >
      <span
        className="cross-item-author notranslate"
      >
        @regenerette
      </span>
    </a>
     
    cross-posted
     
    <a
      className="cross-item-link"
      href="/hive-167922/@regenerette/we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
      onClick={[Function]}
    >
      @regenerette/we-need-each-one-of-you-sos...
    </a>
     
    to
     
    <a
      className="community-name"
      href="/created/hive-125125"
      onClick={[Function]}
      title="Moderated community"
    >
      Ecency
    </a>
  </div>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="regenerette-we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
      >
        <div
          className="flex items-center"
          id="regenerette-we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
        >
          <a
            href="/@regenerette"
            onClick={[Function]}
          >
            <span
              className="author-avatar block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/regenerette/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate flex sm:hidden items-center"
            id="regenerette-we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              regenerette
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="regenerette-we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate hidden sm:flex items-center relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                regenerette
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/created/hive-167922"
        onClick={[Function]}
        title="Moderated community"
      >
        LeoFinance
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Wednesday, March 24, 2021 4:14 PM"
      >
        10M
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive-125125/@regenerette/we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers-hive-125125"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
          />
          <img
            alt=""
            className="w-full"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive-125125/@regenerette/we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers-hive-125125"
        onClick={[Function]}
      >
        WE NEED EACH ONE OF YOU - SOS Financial Advice For Hive Newcomers 
      </a>
      <a
        className="item-body"
        href="/hive-125125/@regenerette/we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers-hive-125125"
        onClick={[Function]}
      >
        Hi I have decided to write this article for newcomers (that need some guidance), for more experienced ones (that can contribute with input, commenting, and helping with suggestions for this article), and
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div />
        <div
          className="entry-payout notranslate"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          $ 5.95
        </div>
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="59 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          59
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive-125125/@regenerette/we-need-each-one-of-you-sos-financial-advice-for-hive-newcomers-hive-125125"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="10 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          10
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      >
        <div
          className="custom-dropdown float-right align-bottom"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
